src/test/deca/context/invalid/cast-incompatible.deca
class A{}
class B{}
{
    A a;
    (B)(a);
}
